fix: Menu styles on mobile (#133)

--- a/user/themes/centra/scss/_sidebar.scss
+++ b/user/themes/centra/scss/_sidebar.scss
@@ -9,7 +9,8 @@
   max-height: 100vh;
   position: sticky;
   top: 0px;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 
   .navigation__centra-logo {
     width: 175px;
